add_library(CruUi
	ThemeManager.cpp
	ThemeResourceDictionary.cpp
	components/Component.cpp
	components/Input.cpp
	components/Menu.cpp
	components/PopupButton.cpp
	components/Select.cpp
	controls/Button.cpp
	controls/CheckBox.cpp
	controls/Container.cpp
	controls/Control.cpp
	controls/ControlHost.cpp
	controls/FlexLayout.cpp
	controls/IconButton.cpp
	controls/ScrollView.cpp
	controls/StackLayout.cpp
	controls/TextBlock.cpp
	controls/TextBox.cpp
	controls/TextHostControlService.cpp
	controls/TreeView.cpp
	controls/Window.cpp
	document/DocumentElement.cpp
	document/DocumentElementType.cpp
	document/TextDocumentElement.cpp
	events/MouseEventArgs.cpp
	helper/ClickDetector.cpp
	helper/ShortcutHub.cpp
	mapper/BorderStyleMapper.cpp
	mapper/BrushMapper.cpp
	mapper/ColorMapper.cpp
	mapper/CornerRadiusMapper.cpp
	mapper/CursorMapper.cpp
	mapper/FontMapper.cpp
	mapper/Mapper.cpp
	mapper/MapperRegistry.cpp
	mapper/MeasureLengthMapper.cpp
	mapper/PointMapper.cpp
	mapper/SizeMapper.cpp
	mapper/StringMapper.cpp
	mapper/ThicknessMapper.cpp
	mapper/style/ConditionMapper.cpp
	mapper/style/StylerMapper.cpp
	mapper/style/StyleRuleMapper.cpp
	mapper/style/StyleRuleSetMapper.cpp
	render/BorderRenderObject.cpp
	render/CanvasRenderObject.cpp
	render/FlexLayoutRenderObject.cpp
	render/GeometryRenderObject.cpp
	render/LayoutHelper.cpp
	render/RenderObject.cpp
	render/ScrollBar.cpp
	render/ScrollRenderObject.cpp
	render/SingleChildRenderObject.cpp
	render/StackLayoutRenderObject.cpp
	render/TextRenderObject.cpp
	render/TreeRenderObject.cpp
	style/Condition.cpp
	style/Styler.cpp
	style/StyleRule.cpp
	style/StyleRuleSet.cpp
)
target_compile_definitions(CruUi PRIVATE CRU_UI_EXPORT_API)
target_link_libraries(CruUi PUBLIC CruPlatformGui)
