add_executable(CruDemoGraphicsDrawCircle DrawCircle.cpp PlatformMain.cpp)
target_link_libraries(CruDemoGraphicsDrawCircle PRIVATE CruDemoBase)

if(TARGET CruPlatformGraphicsCairo)
	add_executable(CruDemoGraphicsDrawCircleCairo DrawCircle.cpp CairoMain.cpp)
	target_link_libraries(CruDemoGraphicsDrawCircleCairo PRIVATE CruDemoBase CruPlatformGraphicsCairo)
endif()
